potentially fixed z-index issue

--- a/css/style.css
+++ b/css/style.css
@@ -1217,7 +1217,7 @@ a:hover {
 		box-shadow: 0 6px 10px rgba(0,0,0,.08), 0 0 6px rgba(0,0,0,.05);
 		padding: 14px 80px 18px 36px;
 		cursor: pointer;
-		/* background-color: rgb(154, 179, 207); */
+		background-color: rgba(106,124,141,1);
 		background: linear-gradient(45deg, rgba(106,124,141,1) 0%, rgba(128,144,155,1) 50%, rgba(143,150,162,1) 100%);
 		z-index: -1;
 	}
@@ -1227,6 +1227,7 @@ a:hover {
 	}
 	  
 	.card-back {
+		z-index: 1;
 		-webkit-transform: rotateY(180deg);
 	}
 
@@ -1447,16 +1448,8 @@ a:hover {
 		background-repeat: no-repeat;
 		background-position: right;
 		background-size: 65px;
-		border: 5px solid blue;
+		border: 5px solid orange;
 	}
-
-	/* .flip-card-inner img {
-		position: absolute;
-		margin-bottom: -100px;
-		width: 300px;
-		border: 2px solid red;
-		z-index: 1;
-	} */
 
     .card-2 {
 		background-image: url(../images/up-arrow.svg);
